@@ -10,6 +10,7 @@
   * Mutex lock on CSS cache access
   * Fixed build problems with GCC 3.3.5
   * XML::Node#to_xml now takes an intentation argument
+  * XML::Node#dup takes an option depth argument
 
 === 1.0.7
 
